@@ -164,6 +164,7 @@ span.span_location location point		{display:inline;}
 span.span_location location point > *	{display:inline; color:#000; font-size:16px;}
 span.span_location location pos:before	{content:" [ "; margin-left:5px;}
 span.span_location location pos:after	{content:" ]";}
+span.span_location location pos.empty	{display:none;}
 span.span_location location description {display:inline; margin-left:10px; font-size:14px; color:#000;}
 
 
@@ -180,6 +181,12 @@ span.region-percent:after	{content:" )";}
 
 span.region-code,
 span.region-vocab			{display:inline; font-size:13px; line-height:24px; color:#000; margin-left:10px; border:1px solid #000; border-radius:4px; padding:2px 4px 3px 4px;}
+
+a.region-uri				{display:inline;}
+a.region-uri:link			{color:#000;}
+a.region-uri:visited		{color:#000;}
+a.region-uri:hover			{color:#000; text-decoration:underline;}
+a.region-uri:active			{color:#000;}
 
 
 /*	Reported by
