@@ -171,6 +171,7 @@ span.span_location location point		{display:inline;}
 span.span_location location point > *	{display:inline; color:#999; font-size:14px;}
 span.span_location location pos:before	{content:" [ "; margin-left:5px;}
 span.span_location location pos:after	{content:" ]";}
+span.span_location location pos.empty	{display:none;}
 span.span_location location description {display:inline; margin-left:10px; font-size:14px; color:#CCC;}
 
 
@@ -188,6 +189,12 @@ span.region-percent:after	{content:" )";}
 
 span.region-code,
 span.region-vocab			{display:inline; font-size:13px; line-height:24px; color:#CCC; margin-left:10px; border-radius:4px; padding:2px 4px 3px 4px; background-color:rgba(72,79,86,0.6);}
+
+a.region-uri				{display:inline;}
+a.region-uri:link			{color:#FFAB5E;}
+a.region-uri:visited		{color:#FFAB5E;}
+a.region-uri:hover			{color:#FF7A00;}
+a.region-uri:active			{color:#FFAB5E;}
 
 
 /*	Reported by
