@@ -1,3 +1,10 @@
+Development Portal (2019-03-22 shi)
+==============================
+Update and fix recipient-region display
+Hide empty location points
+Update print-friendly css
+
+
 Development Portal (2019-03-20 shi)
 ==============================
 Display language code of document-links in SAVi
